--- a/app/views/vins/index.html.erb
+++ b/app/views/vins/index.html.erb
@@ -1,5 +1,8 @@
-<h1>Vins#index</h1>
-<p>Find me in app/views/vins/index.html.erb</p>
+<div class="">
+  <%= image_tag "index_background.jpg"%>
+  <%= image_tag "logo.png", height: 50 %>
+</div>
+
 
 <% @vins.each do |vin| %>
 <%= vin.producteur %>
