--- a/app/views/vins/index.html.erb
+++ b/app/views/vins/index.html.erb
@@ -1,10 +1,16 @@
 <h1>Vins#index</h1>
 <p>Find me in app/views/vins/index.html.erb</p>
 
-<% @vins.each do |vin| %>
-<%= vin.producteur %>
-<%= vin.annee %>
-<%= vin.parker %>
-<%= vin.jrobinson %>
-<%= vin.prix_btl %>
-<% end %>
+<ul>
+  <% @vins.each do |vin| %>
+  <li>
+    <%= link_to vin_path(vin) do  %>
+      <%= vin.producteur %>
+      <%= vin.annee %>
+      <%= vin.parker %>
+      <%= vin.jrobinson %>
+      <%= vin.prix_btl %>
+    <% end %>
+  </li>
+  <% end %>
+</ul>
