--- a/app/views/vins/show.html.erb
+++ b/app/views/vins/show.html.erb
@@ -14,4 +14,4 @@
   <li> <strong> <%= @vin.nb_btl_caisse %></strong> </li>
 </ul>
 
-<%= link_to 'List of vins', vins_index_path %>
+<%= link_to 'List of vins', vins_path %>
