--- a/app/views/vins/index.html.erb
+++ b/app/views/vins/index.html.erb
@@ -8,20 +8,22 @@
     <% @vins.each do |vin| %>
 
       <div class="col-xs-12 col-lg-4">
-        <div class="card">
-          <div class="card_image">
-            <%= image_tag "chateau_lafite_2009.png", width: 135 %>
+        <%= link_to vin_path(vin) do %>
+          <div class="card">
+            <div class="card_image">
+              <%= image_tag "chateau_lafite_2009.png", width: 135 %>
+            </div>
+            <ul class="card_ul">
+
+              <li class="card_li_producteur"><%= vin.producteur %></li>
+              <li><%= vin.annee %></li>
+              <li><%= vin.parker %></li>
+              <li><%= vin.jrobinson %></li>
+              <li><%= vin.prix_btl %></li>
+
+            </ul>
           </div>
-          <ul class="card_ul">
-
-            <li class="card_li_producteur"><%= vin.producteur %></li>
-            <li><%= vin.annee %></li>
-            <li><%= vin.parker %></li>
-            <li><%= vin.jrobinson %></li>
-            <li><%= vin.prix_btl %></li>
-
-          </ul>
-        </div>
+        <% end %>
       </div>
     <% end %>
   </div>
