update delete function added to the pages

--- a/app/views/vins/create.html.erb
+++ b/app/views/vins/create.html.erb
@@ -1,2 +1,4 @@
-<h1>Vins#create</h1>
-<p>Find me in app/views/vins/create.html.erb</p>
+<h1>Create here</h1>
+
+<%= render "form-for", vin: @vin %>
+<%= link_to 'List of vins', vins_path %>
