--- a/app/views/vins/edit.html.erb
+++ b/app/views/vins/edit.html.erb
@@ -1,2 +1,4 @@
-<h1>Vins#edit</h1>
-<p>Find me in app/views/vins/edit.html.erb</p>
+<h1>Edit here</h1>
+
+<%= render "form-for", vin: @vin %>
+<%= link_to 'List of vins', vins_path %>
