Add info on seed

--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -23,4 +23,5 @@ $border-radius-large: 2px;
 $border-radius-small: 2px;
 
 $btn-primary-bg: $red;
+// $btn-primary-font-weight: lighter;
 // Override other variables below!
