Upload button implemented Picture show on show.html

--- a/app/views/vins/_form-for.html.erb
+++ b/app/views/vins/_form-for.html.erb
@@ -10,5 +10,9 @@
   <%= a.input :annee %>
   <%= a.input :nb_btl_caisse %>
   <%= a.input :description %>
+
+  <%= a.input :photo %>
+  <%= a.input :photo_cache, as: :hidden %>
+
   <%= a.button :submit, class: 'btn btn-warning'%>
   <% end %>
