--- a/app/views/vins/index.html.erb
+++ b/app/views/vins/index.html.erb
@@ -11,7 +11,7 @@
         <%= link_to vin_path(vin) do %>
           <div class="card">
             <div class="card_image">
-              <%= image_tag "chateau_lafite_2009.png", width: 135 %>
+              <%= cl_image_tag @vin.photo, width: 235, crop: :fill %>
             </div>
             <ul class="card_ul">
 
