--- a/app/views/vins/index.html.erb
+++ b/app/views/vins/index.html.erb
@@ -11,7 +11,11 @@
         <%= link_to vin_path(vin) do %>
           <div class="card">
             <div class="card_image">
-              <%= cl_image_tag @vin.photo, width: 235, crop: :fill %>
+              <% if vin [:photo] == nil %>
+              <% "no picture" %>
+              <% else %>
+              <%= cl_image_tag vin.photo, width: 135, height: 193,crop: :fit %>
+              <% end %>
             </div>
             <ul class="card_ul">
 
