--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,17 +1,30 @@
-<h2>Sign up</h2>
+<div class="create-user">
+  <div class="login_card">
+    <div class="top-title">
+      <div class="welcome_text company_name">
+        AirbnWine
+      </div>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
+      <div class="welcome_text strip_line">
+        Fine wine. Good price.
+      </div>
+    </div>
+    <div class="title">
+      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= f.error_notification %>
+    </div>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
-    <%= f.input :password_confirmation, required: true %>
+    <div class="form">
+        <%= f.input :email, label: false, required: true, autofocus: true, placeholder: "email" %>
+        <%= f.input :password, label: false,required: true, placeholder: "type your password", hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
+        <%= f.input :password_confirmation, label: false, required: true, placeholder: "confirm your password" %>
+    </div>
+
+    <div class="form-actions">
+        <%= f.button :submit, "Sign up", class: "btn btn-primary special  font-weight-light" %>
+    </div>
+    <% end %>
+
+      <%= render "devise/shared/links" %>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
