--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -1,21 +1,34 @@
 .login_page{
-  position: relative;
-  background-image: url('login_background.jpg');
-
+  display: flex;
+  background-color: white;
   height: calc(100vh - 70px);
 }
 
+.left_block{
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.right_block{
+  width: 50%;
+  display: flex;
+  align-items: center;
+}
+
+
 .login_card{
-  margin-top: 130px;
-  margin-left: 50px;
-  float:left;
+margin-left: auto;
+margin-right: auto;
   width: 400px;
 }
 
 .welcome_text{
   font-weight: lighter;
   text-align:center;
-  color: white;
+  color: #831F40;
 }
 .company_name{
 font-size: 50px;
@@ -23,14 +36,46 @@ font-size: 50px;
 
 .strip_line{
   font-size: 20px;
+  font-weight:100;
   margin-bottom: 30px;
-}
-
-.form_element{
-  margin-top: 20px;
+  color: #707376;
+  margin-top: 10px;
   margin-bottom: 20px;
 }
 
-.special{
-  width: 400px;
+.form_input{
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border: 1px solid;
+  border-color: #831F40;
+  border-radius: 4px;
+  height: 60px;
+  font-weight: 200;
 }
+
+.submit_button{
+  width: 400px;
+  background-color: #831F40;
+  border-radius: 4px;
+  color: white;
+  font-weight: 200;
+  height: 60px;
+}
+
+.shared_links a{
+  color: #831F40;
+  font-size: 15px;
+  font-weight: 200;
+  margin: 5px;
+}
+
+.shared_links a:hover{
+  color: #831F40;
+  font-size: 15px;
+  font-weight: 400;
+  margin: 5px;
+}
+
+
+
+// CSS code for New2.html.erb
