Index page formating reviewed

--- a/app/views/vins/index.html.erb
+++ b/app/views/vins/index.html.erb
@@ -1,5 +1,19 @@
-<div class="header">
-  <%= image_tag "index_background", width: "100%" %>
+<div class="index_header">
+  <!-- <%= image_tag "index_background", width: "100%" %> -->
+  <div class="index_header_text">
+    Find best french wines at best prices
+
+  </div>
+<br>
+  <div class="search">
+    <%= image_tag "icons/search", width: 30, :class => "search_image"%>
+    seach your favorite wine...
+
+    <div class="search_button">
+      Search
+    </div>
+  </div>
+
 </div>
 <div class="container">
 
