Corrected btn class and add navbar

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -23,8 +23,8 @@
   font-weight: bold;
 }
 .btn {
-  margin: 15px;
-  border-radius: 10%;
+  // margin: 15px;
+  // border-radius: 10%;
 }
 .second-descript {
   margin-bottom: 10px;
