--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -1,56 +1,174 @@
-.margin-shadow {
-  margin: 20px;
-  box-shadow: 10px 10px 10px rgb(200, 200, 200);
+.show_wrapper{
+  margin-left: 30px;
+  margin-right: 30px;
 }
+
+.top-bar {
+  margin-top: 40px;
+  margin-left: 30px;
+  margin-right: 30px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 50px;
+}
+
+.back_to_list{
+margin-left: 20px;
+}
+
+.back_to_list a{
+  font-size: 16px;
+  font-weight: 200;
+  color: #831F40;
+  margin: 10px;
+}
+
+
+.admin_buttons{
+  width: 400px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.edit_button{
+  width: 150px;
+  height: 40px;
+  border-radius: 4px;
+  border:1px solid #831F40;
+  background-color: white;
+  color: #831F40;
+  font-size: 16px;
+  font-weight: 200;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 120px;
+  margin: 0;
+}
+
+.edit_button a{
+
+}
+
+.search_button a{
+  color: white;
+}
+.pay {
+margin-right: 20px;
+font-size: 16px;
+font-weight: 200;
+color: #831F40;
+margin: 10px;
+}
+// .margin-shadow {
+//   margin: 20px;
+//   box-shadow: 10px 10px 10px rgb(200, 200, 200);
+// }
 .content {
   display: flex;
   justify-content: space-between;
 }
 
-.card-descript {
-  text-align: center;
-  border: 1px solid white;
-  @extend   .margin-shadow;
-}
 .card-btl {
-  @extend   .margin-shadow;
-  background-color: #EAEAEA;
+  width: 25%;
+  display: flex;
+  justify-content:center;
 }
 
+.card-descript {
+  width: 50%;
+  display: flex;
+  justify-content:center;
+  flex-direction: column;
+  padding-left: 30px;
+  padding-right: 70px;
+}
+
+.card-details {
+  width: 25%;
+  display: flex;
+  justify-content:center;
+  flex-direction: column;
+}
+
+ul{
+padding: 0;
+}
+.add_to_cart{
+  width:100%;
+  height: 50px;
+  background-color: #831F40;
+  border-radius: 4px;
+  font-size: 16px;
+  font-weight: 200;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+}
 .first-descript {
   margin: 15px 0;
+  font-size: 30px;
   color: black;
   font-weight: bold;
 }
-.btn {
-  // margin: 15px;
-  // border-radius: 10%;
-}
+
 .second-descript {
   margin-bottom: 10px;
   color: #AAAAAA;
 }
-
-.card-btn {
-  @extend   .margin-shadow;
-  text-align: center;
-  padding: 10px;
-  width: 200px;
+.fourth-descript{
+  font-size: 18px;
+  font-weight: 100;
+  text-align: justify;
 }
 
-.top-bar {
-  text-align: center;
-  position: relative;
+.price{
+  display: flex;
 }
-.menu {
-  position: absolute;
-  left: 10px;
-  color: #831F40;
+
+.amount{
+  margin: 10px;
+  font-size: 48px;
+  font-weight: 100;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.pay {
-  position: absolute;
-  right: 10px;
+
+.currency{
+  margin: 10px;
+  font-size: 36px;
+  font-weight: 400;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
+.per_bottle{
+  margin: 10px;
+  font-size: 14px;
+  font-weight: 100;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .details {
-  font-size: 10px;
+  font-size: 15px;
+  display: flex;
+}
+
+.details li {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.show_description_fields{
+    font-weight: 500;
+}
+.show_description_values{
+  padding-left: 30px;
+  font-weight: 100;
+  color: #831F40;
 }
