Correction img extensions

--- a/app/views/vins/show.html.erb
+++ b/app/views/vins/show.html.erb
@@ -2,7 +2,7 @@
 
   <div class="top-bar">
     <div class="back_to_list">
-      <%= image_tag "icons/list", width: 30%>
+      <%= image_tag "icons/list.svg", width: 30%>
       <%= link_to 'Back to list', vins_path %>
     </div>
 
@@ -17,7 +17,7 @@
 
     <div class="pay">
       Order and pay
-      <%= image_tag "icons/cart-simple", width: 30%>
+      <%= image_tag "icons/cart-simple.svg", width: 30%>
     </div>
   </div>
 
