--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -3,12 +3,12 @@
 <% end -%>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= image_tag "icons/user_account", width: 30%>
+  <%= image_tag "icons/user_account.svg", width: 30%>
   <span> </span><%= link_to "Create an account", new_registration_path(resource_name) %><br />
 <% end -%>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= image_tag "icons/lock-open", width: 30%>
+  <%= image_tag "icons/lock-open.svg", width: 30%>
   <span> </span><%= link_to "Forgot your password?", new_password_path(resource_name) %><br />
 <% end -%>
 
