--- a/app/views/vins/index.html.erb
+++ b/app/views/vins/index.html.erb
@@ -5,7 +5,7 @@
   </div>
 <br>
   <div class="search">
-    <%= image_tag "icons/search", width: 30, :class => "search_image"%>
+    <%= image_tag "icons/search.svg", width: 30, :class => "search_image"%>
     seach your favorite wine...
 
     <div class="search_button">
