--- a/app/assets/stylesheets/pages/_vin_index.scss
+++ b/app/assets/stylesheets/pages/_vin_index.scss
@@ -1,7 +1,7 @@
 .index_header{
   width: 100%;
   height: 400px;
-  background-image: url('index_background');
+  background-image: url('index_background.jpg');
   display: flex;
   flex-direction: column;
   justify-content: center;
