--- a/app/views/vins/edit.html.erb
+++ b/app/views/vins/edit.html.erb
@@ -7,6 +7,7 @@
     </div>
 
     <div class="admin_buttons">
+
       <div class="edit_button">
         <%= link_to "Edit", edit_vin_path %>
       </div>
@@ -21,13 +22,14 @@
     </div>
   </div>
 <%= simple_form_for @vin do |a| %>
-<%= a.input :photo %>
-<%= a.input :photo_cache, as: :hidden %>
+
   <div class="content">
 
 
     <div class="card-btl">
-      <%= cl_image_tag @vin.photo, width: 235, height: 498, crop: :fill %>
+      <%= cl_image_tag @vin.photo, width: 235, crop: :fill %>
+      <%= a.input :photo, label: false %>
+      <%= a.input :photo_cache, as: :hidden %>
     </div>
 
     <div class="card-descript">
@@ -43,13 +45,17 @@
       </div>
 
       <div class="fourth-descript">
-        <%= a.input :description, label: false, as: :text %>
+
+        <%= a.input_field:description, label: false, as: :text, class: "text_box" %>
       </div>
     </div>
 
     <div class="card-details">
+      <div class="add_to_cart_edit">
+        Add to cart
+      </div>
       <div class="price">
-        <div class="amount"><%= a.input :prix_btl, label: false  %></div>
+        <div class="amount"><%= a.input_field :prix_btl, label: false, class: "amount"  %></div>
         <div class="currency">Eur</div>
         <div class="per_bottle">la bouteille</div>
       </div>
@@ -80,14 +86,17 @@
             <li><%= a.input_field :annee, label: false, class: "edit_input"  %></li>
             <li><%= a.input_field :nb_btl_caisse, label: false, class: "edit_input"  %></li>
           </ul>
-        </div>
 
+        </div>
       </div>
+      <%= a.button :submit, class: 'btn btn-warning'%>
     </div>
 
   </div>
   <div class="">
-    <%= a.button :submit, class: 'btn btn-warning'%>
+
   </div>
   <% end %>
 </div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
