--- a/app/assets/stylesheets/pages/_vin_index.scss
+++ b/app/assets/stylesheets/pages/_vin_index.scss
@@ -39,8 +39,66 @@
   font-size: 30px;
   font-weight: 400;
 }
-
 .search_image{
   margin-right: 15px;
   margin-left: 15px;
+}
+
+/* User Avatar */
+.avatar {
+  height: 45px;
+  width: 45px;
+  border-radius: 50%;
+}
+.navbar-right {
+  position: absolute;
+  top: 30px;
+  right:30px;
+}
+.navbar-item {
+  cursor: pointer;
+  padding: 0 20px;
+}
+/* Navbar link */
+.navbar-link {
+  color: #616668;
+  font-size: 14px;
+}
+.navbar-link:hover {
+  color: #da552f;
+  text-decoration: none;
+}
+
+/* Dropdown menu */
+.dropdown-menu {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  margin-top: 15px;
+  box-shadow: 1px 1px 4px #E6E6E6;
+  border-color: #E6E6E6;
+}
+.navbar-dropdown-menu li > a {
+  transition: color 0.3s ease;
+  font-weight: lighter !important;
+  color: #999999 !important;
+  font-size: 15px !important;
+  line-height: 22px !important;
+  padding: 10px 20px;
+}
+.navbar-dropdown-menu li > a:hover {
+  background: transparent !important;
+  color: black !important;
+}
+.navbar-dropdown-menu:before {
+  content: ' ';
+  height: 10px;
+  width: 10px;
+  position: absolute;
+  right: 10px;
+  top: -6px;
+  background-color: white;
+  transform: rotate(45deg);
+  border-left: 1px solid #E6E6E6;
+  border-top: 1px solid #E6E6E6;
 }
