--- a/app/views/vins/index.html.erb
+++ b/app/views/vins/index.html.erb
@@ -1,9 +1,48 @@
 <div class="index_header">
   <div class="index_header_text">
     Find best french wines at best prices
-
   </div>
 <br>
+
+    <!-- Right Navigation -->
+  <div class="navbar-right">
+
+    <% if user_signed_in? %>
+
+      <!-- Avatar with dropdown menu -->
+      <div class="navbar-item">
+        <div class="dropdown">
+          <%= image_tag "logo_airbnwine.jpg", class: "avatar dropdown-toggle", id: "navbar-menu", "data-toggle" => "dropdown" %>
+          <ul class="dropdown-menu dropdown-menu-right navbar-dropdown-menu">
+            <li>
+              <%= link_to "#" do %>
+                <i class="fa fa-user"></i> <%= t(".profile", default: "Profile") %>
+              <% end %>
+            </li>
+            <li>
+              <%= link_to "#" do %>
+                <i class="fa fa-cog"></i>  <%= t(".settings", default: "Settings") %>
+              <% end %>
+            </li>
+            <li>
+              <%= link_to new_vin_path do %>
+                <i class="fas fa-plus"></i>  <%= t(".settings", default: "Create") %>
+              <% end %>
+            </li>
+            <li>
+              <%= link_to destroy_user_session_path, method: :delete do %>
+                <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "Log out") %>
+              <% end %>
+            </li>
+          </ul>
+        </div>
+      </div>
+    <% else %>
+      <!-- Login link (when logged out) -->
+      <!-- <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-item navbar-link" %> -->
+    <% end %>
+  </div>
+
   <div class="search">
     <%= image_tag "icons/search.svg", width: 30, :class => "search_image"%>
     seach your favorite wine...
