--- a/app/views/vins/index.html.erb
+++ b/app/views/vins/index.html.erb
@@ -26,7 +26,7 @@
             </li>
             <li>
               <%= link_to new_vin_path do %>
-                <i class="fas fa-plus"></i>  <%= t(".settings", default: "Create") %>
+                <i class="fa fa-plus"></i>  <%= t(".settings", default: "Create") %>
               <% end %>
             </li>
             <li>
