--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -95,7 +95,7 @@ margin: 10px;
 ul{
 padding: 0;
 }
-.add_to_cart{
+.add_to_cart_button{
   width:100%;
   height: 50px;
   background-color: #831F40;
