--- a/app/views/vins/index.html.erb
+++ b/app/views/vins/index.html.erb
@@ -2,72 +2,76 @@
   <div class="index_header_text">
     Find best french wines at best prices
   </div>
-<br>
+  <br>
 
-    <!-- Right Navigation -->
+  <!-- Right Navigation -->
   <div class="navbar-right">
 
     <% if user_signed_in? %>
 
-      <!-- Avatar with dropdown menu -->
-      <div class="navbar-item">
-        <div class="dropdown">
-          <%= image_tag "logo_airbnwine.jpg", class: "avatar dropdown-toggle", id: "navbar-menu", "data-toggle" => "dropdown" %>
-          <ul class="dropdown-menu dropdown-menu-right navbar-dropdown-menu">
-            <li>
-              <%= link_to "#" do %>
-                <i class="fa fa-user"></i> <%= t(".profile", default: "Profile") %>
-              <% end %>
-            </li>
-            <li>
-              <%= link_to "#" do %>
-                <i class="fa fa-cog"></i>  <%= t(".settings", default: "Settings") %>
-              <% end %>
-            </li>
-            <li>
-              <%= link_to new_vin_path do %>
-                <i class="fa fa-plus"></i>  <%= t(".settings", default: "Create") %>
-              <% end %>
-            </li>
-            <li>
-              <%= link_to destroy_user_session_path, method: :delete do %>
-                <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "Log out") %>
-              <% end %>
-            </li>
-          </ul>
-        </div>
+    <!-- Avatar with dropdown menu -->
+    <div class="navbar-item">
+      <div class="dropdown">
+        <%= image_tag "logo_airbnwine.jpg", class: "avatar dropdown-toggle", id: "navbar-menu", "data-toggle" => "dropdown" %>
+        <ul class="dropdown-menu dropdown-menu-right navbar-dropdown-menu">
+          <li>
+            <%= link_to "#" do %>
+            <i class="fa fa-user"></i> <%= t(".profile", default: "Profile") %>
+            <% end %>
+          </li>
+          <li>
+            <%= link_to "#" do %>
+            <i class="fa fa-cog"></i>  <%= t(".settings", default: "Settings") %>
+            <% end %>
+          </li>
+          <li>
+            <%= link_to new_vin_path do %>
+            <i class="fa fa-plus"></i>  <%= t(".settings", default: "Create") %>
+            <% end %>
+          </li>
+          <li>
+            <%= link_to destroy_user_session_path, method: :delete do %>
+            <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "Log out") %>
+            <% end %>
+          </li>
+        </ul>
       </div>
+    </div>
     <% else %>
-      <!-- Login link (when logged out) -->
-      <!-- <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-item navbar-link" %> -->
+    <!-- Login link (when logged out) -->
+    <!-- <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-item navbar-link" %> -->
     <% end %>
   </div>
 
-  <div class="search">
+  <div class="midle">
     <!-- <%= image_tag "icons/search.svg", width: 30, :class => "search_image"%>
     seach your favorite wine...
 
     <div class="search_button">
       Search
     </div> -->
-    <%= form_tag vins_path, method: :get do %>
-    <%= text_field_tag :query,
-    params[:query],
-    class: "form-control",
-    placeholder: "Find a wine..."
-  %>
-<% end %>
+    <div>
+      <i class="fa fa-search"></i>
+    </div>
+    <div>
+      <%= form_tag vins_path, method: :get do %>
+      <%= text_field_tag :query, params[:query], placeholder: "Find a wine..."%>
+      </div>
+        <%= submit_tag("Search", class: "button") %>
+      </div>
+      <% end %>
+    <div>
   </div>
 
-</div>
-<div class="container">
+  </div>
+  <div class="container">
 
-  <div class="row ">
+    <div class="row ">
 
       <!-- <div class="block"> -->
-    <% @vins.each do |vin| %>
-    <%= link_to vin_path(vin) do %>
-    <div class="col-xs-12 col-md-4  col-lg-4 ">
+        <% @vins.each do |vin| %>
+        <%= link_to vin_path(vin) do %>
+        <div class="col-xs-12 col-md-4  col-lg-4 ">
 
           <div class="card">
             <div class="card_image">
@@ -81,22 +85,22 @@
               <% end %>
             </div>
             <div class="card_text">
-            <ul class="card_ul">
+              <ul class="card_ul">
 
-              <li class="card_li_producteur"><%= vin.producteur %></li>
-              <li class="card_li_annee"><%= vin.annee %></li>
-              <li class="card_li_notation">Parker: <%= vin.parker %> - J.Robinson:<%= vin.jrobinson %></li>
-              <li class="card_li_price"><%= vin.prix_btl %> eur/btl</li>
-              <li class="card_li_nb_btl_caisse">caisse de <%= vin.nb_btl_caisse %></li>
+                <li class="card_li_producteur"><%= vin.producteur %></li>
+                <li class="card_li_annee"><%= vin.annee %></li>
+                <li class="card_li_notation">Parker: <%= vin.parker %> - J.Robinson:<%= vin.jrobinson %></li>
+                <li class="card_li_price"><%= vin.prix_btl %> eur/btl</li>
+                <li class="card_li_nb_btl_caisse">caisse de <%= vin.nb_btl_caisse %></li>
 
-            </ul>
+              </ul>
             </div>
           </div>
 
-</div>
-<% end %>
-    <% end %>
-  <!-- </div> -->
+        </div>
+        <% end %>
+        <% end %>
+        <!-- </div> -->
 
-</div>
-</div>
+      </div>
+    </div>
