--- a/app/assets/stylesheets/pages/_vin_index.scss
+++ b/app/assets/stylesheets/pages/_vin_index.scss
@@ -8,19 +8,29 @@
   align-items: center;
 }
 
-.search{
-  width: 500px;
+.midle{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 800px;
   height: 60px;
   background-color: white;
   border-radius: 4px;
-  display: flex;
-  align-items: center;
   color: gray;
   font-size: 16px;
   font-weight: 200;
+  opacity: 0.9;
 }
-
-.search_button{
+#query {
+  width: 550px;
+  font-size: 20px;
+  font-weight: 200;
+  border: none;
+}
+.fa {
+  font-size: 2em;
+}
+.button {
   width: 100px;
   height: 40px;
   background-color: #831F40;
@@ -31,17 +41,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-left: 120px;
 }
+
 .index_header_text{
   color: white;
-  width: 500px;
-  font-size: 30px;
-  font-weight: 400;
-}
-.search_image{
-  margin-right: 15px;
-  margin-left: 15px;
 }
 
 /* User Avatar */
