simple view works

--- a/app/views/vins/show.html.erb
+++ b/app/views/vins/show.html.erb
@@ -85,3 +85,12 @@
     </div>
   </div>
 </div>
+
+      <% @vin.reviews.each do |review| %>
+       <p> <%= review.content %> </p>
+
+      <% end %>
+
+
+  <%= render 'reviews/form', vin: @vin, review: @review %>
+
