--- a/app/views/reviews/_show.html.erb
+++ b/app/views/reviews/_show.html.erb
@@ -1,1 +1,4 @@
-<p> <%= review.content %> </p>
+   <div class="existing">
+<p> <%= review.content %> <%= link_to vin_review_path(@vin, review), method: :delete do %><i class="fa fa-trash" aria-hidden="true"></i></p>
+  <% end  %>
+</div>
