--- a/app/views/vins/show.html.erb
+++ b/app/views/vins/show.html.erb
@@ -87,9 +87,12 @@
   <div class="review">
     <div class="context">
       <%= render 'reviews/form', vin: @vin, review: @new_review %>
-      <div class="existing">
+      <div id="existing">
           <% @vin.reviews.each do |review| %>
-           <p> <%= review.content %> </p>
+           <div class="existing">
+           <p> <%= review.content %> <%= link_to vin_review_path(@vin, review), method: :delete do %><i class="fa fa-trash" aria-hidden="true"></i></p>
+            <% end  %>
+           </div>
           <% end %>
       </div>
     </div>
