--- a/app/views/carts/_shopping_cart.html.erb
+++ b/app/views/carts/_shopping_cart.html.erb
@@ -13,6 +13,9 @@
   </p>
 <% else %>
   <% @order_items.each do |order_item| %>
-    <%= render 'carts/cart_row', product: order_item.product, order_item: order_item, show_total: true %>
+
+  <%= order_item.vin.producteur %>
+  <%= order_item.quantity %>
+<br>
   <% end %>
 <% end %>
