--- a/app/views/vins/show.html.erb
+++ b/app/views/vins/show.html.erb
@@ -17,7 +17,8 @@
     </div>
 
     <div class="pay">
-      Order and pay
+
+      <%= link_to "Order and pay", cart_path %>
       <%= image_tag "icons/cart-simple.svg", width: 30%>
     </div>
   </div>
